# Osiris

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  README_MULTI_OS.md  demo_osiris.py  dfir_remote.py  docker-compose.yml  full_scan.json  init_env.ps1  install.py  kali_dfir_gui.py  osiris.py  osiris_cli.py  osiris_pb2.py  osiris_pb2_grpc.py  pyproject.toml  real_full_scan.json  real_network.json  real_processes.json  real_test.json  requirements.txt  setup.py  start_osiris.ps1  stop_osiris.ps1  test_final.py  test_linux_collectors.py  test_network.json  test_osiris_complete.py  test_osiris_simple.py  test_output.json  test_processes.json  test_shell_history.py  test_users.json  test_users2.json  test_users3.json
agent/: agent.py  config.yaml  main.py
collectors/: __init__.py  logs.py  network.py  processes.py  system.py  users.py
config/: osiris.conf
docs/: windows_collectors.md
examples/: targets.ini
hive/: config.yaml  database.py  hive.py  init_db.py  timeline_normalizer.py  web_server.py
protos/: federation.proto  osiris.proto  response.proto
reports/: report_template.html
scripts/: build_installers.py  compile_protos.py  generate_certs.py  migrate_database.py  setup_env.py
tests/: conftest.py  test_integration.py  test_linux_collectors.py  test_linux_coverage.py  test_linux_multi_os.py  test_macos_coverage.py  test_macos_multi_os.py  test_windows_cache.py  test_windows_collectors.py  test_windows_coverage.py  test_windows_detailed.py  test_windows_multi_os.py  test_windows_validation.py
utils/: archiver.py  (+3 more)
(+129 files in other folders)
