[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfir-collector"
version = "0.1.0"
description = "Un collecteur DFIR distribué avec communication gRPC sécurisée"
requires-python = ">=3.8"
dependencies = [
    "grpcio==1.73.0",
    "grpcio-tools==1.73.0",
    "cryptography==42.0.2",
    "PyYAML==6.0.2",
    "protobuf>=6.30.0,<7.0.0",
    "psutil>=5.9.0"
]

[tool.pylance]
python.analysis.extraPaths = ["."]
python.analysis.autoImportCompletions = true
python.analysis.typeCheckingMode = "basic"

[tool.setuptools]
packages = ["protos", "agent", "hive"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --cov=osiris --cov-report=term-missing" 